<resources>
    <string name="app_name">iMedTracker</string>

    <!-- Strings related to login/sign up pages-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <!-- Strings related to login page-->
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register here</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <!-- Strings related to sign up page-->
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="action_login">Already registered? <b>Click here to login</b></string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_nav_controller">NavController</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <!-- Strings related to add medication-->
    <string name="nameMed">Enter Name of Medication</string>
    <string name="numDoses">Enter Number of Doses</string>
    <string name="doseFrequency">Choose Dose Frequency</string>
    <string name="alarmTime">Set Alarm Time</string>
    <string name="addMedication">Add Medication</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
</resources>