<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    android:rowCount="2"
    android:columnCount="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="imedtracker.csci3300.csci.mccb.ung.edu.imedtracker.LogInController">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="185dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/email_icon"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textPersonName"
        android:textColorHint="#d6d6d6"
        android:textColor="#d6d6d6"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColorHint="#d6d6d6"
        android:textColor="#d6d6d6"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@color/colorAccent"
        android:onClick="touchLogIn"
        android:text="@string/action_sign_in"
        android:textColor="#fff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="touchSignUp"
        android:text="@string/action_register"
        android:textColor="#d6d6d6"
        android:textSize="14sp" />

</RelativeLayout>
